[package]
name = "js-rust-libp2p"
version = "0.1.0"
authors = ["fluencelabs"]
edition = "2018"

[dependencies]
futures = "0.1"
libp2p = "0.13.1"
libp2p-core = "0.13.1"
libp2p-ping = "0.13.1"
libp2p-identify = "0.13.1"
libp2p-swarm = "0.3.0"

failure = "0.1.6"
fnv = "1.0.6"

void = "1.0.2"
names = "0.11"
tokio = "1.18"
tokio-stdin-stdout = "0.1"

env_logger = "0.7.1"

base64 = "0.11.0"
bs58 = "0.3.0"